--- a/Proje_OPP/Views/Default/deneme.cshtml
+++ b/Proje_OPP/Views/Default/deneme.cshtml
@@ -13,6 +13,7 @@
         <th>Ülke</th>
         <th>Şehir</th>
         <th>nüfus</th>
+        <th>bayrak</th>
 
     </tr>
     <tr>
@@ -20,12 +21,14 @@
         <td>@ViewBag.v2</td>
         <td>@ViewBag.v3</td>
         <td>@ViewBag.v4</td>
+        <td>@ViewBag.v5  @ViewBag.v6  @ViewBag.v7</td>
     </tr>
     <tr>
         <td>@ViewBag.z1</td>
         <td>@ViewBag.z2</td>
         <td>@ViewBag.z3</td>
         <td>@ViewBag.z4</td>
+        <td>@ViewBag.z5  @ViewBag.z6  @ViewBag.z7</td>
     </tr>
 </table>
 <a href="/Default/Products/" class="btn btn-info">Products</a>
